--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "aws-cdk-lib": "2.186.0",
     "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "uuid": "9.0.0"
   }
