--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@aws-cdk/aws-lambda-nodejs": "^1.203.0",
     "@aws-sdk/client-dynamodb": "^3.804.0",
+    "@aws-sdk/client-sns": "^3.812.0",
+    "@aws-sdk/client-sqs": "^3.812.0",
     "aws-cdk-lib": "2.186.0",
     "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0",
